# nhsdigital.ftrs-directory-of-services

./: package.json
.github/actions/action-infrastructure-stack/: action.yaml
.github/actions/authenticate-apim/: action.yaml
.github/actions/create-lines-of-code-report/: action.yaml
.github/actions/deploy-service/: action.yaml
.github/workflows/: authentication-to-apim.yaml  build-project.yaml  deploy-account-wide-infrastructure.yaml  deploy-application-infrastructure.yaml  deploy-data-migration-project.yaml  deploy-frontend-project.yaml  deploy-infrastructure.yaml  deploy-lambda-code.yaml  manage-dynamodb-data.yaml  metadata.yaml  pipeline-build-deploy-release.yaml  pipeline-build-release.yaml  pipeline-cancel-paused-workflows.yaml  pipeline-deploy-account-infrastructure.yaml  pipeline-deploy-application.yaml  pipeline-deploy-policies.yaml  pipeline-deploy-release.yaml  pipeline-infrastructure-cleardown.yaml  pipeline-stop-opensearch-ingestion-pipelines.yaml  pipeline-truncate-workflow-history.yaml  quality-checks.yaml  service-automation-test.yaml
containers/dos-search-api/: Dockerfile  readme.txt
containers/dos-search-api/app/: main.py
docs/specification/: dos-ingest-api-oas-v2.yaml  dos-ingest-api-oas.yaml
infrastructure/: data_migration.tfvars  gp_search.tfvars
infrastructure/common/: common-variables.tf  locals.tf
scripts/workflow/: action-infra-stack.sh  get-apim-token.sh  service-automation-tests.sh
services/data-migration/: pyproject.toml
services/data-migration/pipeline/: application.py  cli.py  processor.py  triagecode_processor.py
services/data-migration/pipeline/transformer/: base.py
services/data-migration/pipeline/utils/: config.py  dbutil.py  secret_utils.py
services/data-migration/src/cli/: main.py
services/data-migration/src/common/: cache.py  config.py  events.py  secret_utils.py  sql_utils.py  uuid_utils.py
services/data-migration/src/dms_provisioner/: config.py  dms_service.py  lambda_handler.py  trigger.sql.tmpl
services/data-migration/src/queue_populator/: config.py  lambda_handler.py
services/data-migration/src/record_change_trigger/: lambda_handler.py
services/data-migration/src/reference_data_load/: application.py  config.py  lambda_handler.py
services/data-migration/src/reference_data_load/handlers/: triage_code_handler.py
services/data-migration/src/reference_data_load/mapper/: triage_code_mapper.py
services/data-migration/src/seeding/: export_to_s3.py  restore.py
services/data-migration/src/service_migration/: application.py  constants.py  lambda_handler.py  processor.py
services/data-migration/src/service_migration/formatting/: address_formatter.py  number_formatter.py
services/data-migration/src/service_migration/transformer/: __init__.py  base.py  gp_enhanced_access.py  gp_practice.py
services/data-migration/src/service_migration/validation/: base.py  service.py  types.py
services/data-migration/src/service_migration/validation/field/: __init__.py  base.py  email.py  phone_number.py
services/data-migration/tests/unit/: test_application.py  test_cli.py  test_processor.py
services/data-migration/tests/unit/cli/: test_main.py
services/data-migration/tests/unit/common/: test_cache.py  test_config.py  test_secret_utils.py
services/data-migration/tests/unit/dms_provisioner/: test_dms_lambda_handler.py  test_dms_service.py
services/data-migration/tests/unit/queue_populator/: test_queue_populator_lambda_handler.py
services/data-migration/tests/unit/record_change_trigger/: test_trigger_lambda_handler.py
services/data-migration/tests/unit/reference_data_load/mapper/: test_triage_code_mapper.py
services/data-migration/tests/unit/seeding/: test_export_to_s3.py  test_restore.py
services/data-migration/tests/unit/service_migration/: test_application.py  test_lambda_handler.py  test_processor.py  test_processor_validation.py
services/data-migration/tests/unit/service_migration/formatting/: test_address_formatter.py  test_number_formatter.py
services/data-migration/tests/unit/service_migration/transformer/: test_base.py  test_gp_enhanced_access.py  test_gp_practice.py
services/data-migration/tests/unit/service_migration/validation/: test_email.py  test_phone_number.py
services/data-migration/tests/unit/transformer/: test_base.py  test_gp_enhanced_access.py  test_gp_practice.py
services/data-migration/tests/unit/utils/: test_dbutil.py
services/data-migration/tests/util/: fixtures.py
services/dos-ingest-api/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
services/dos-ingest-api/tests/: conftest.py  constants.py  test_smoke.py
services/dos-search/: README_FTRS_LOGGER.md  pyproject.toml  run_ftrs_logger_test.py
services/dos-search/functions/: dos_search_ods_code_function.py  error_util.py  ftrs_logger.py
services/dos-search/functions/ftrs_service/: ftrs_service.py
services/dos-search/functions/ftrs_service/fhir_mapper/: endpoint_mapper.py
services/dos-search/tests/unit/functions/: test_dos_search_ods_code_function.py  test_error_util.py  test_ftrs_logger.py
services/dos-ui/: Makefile  package.json  vite.config.ts
services/read-only-viewer/: Makefile
tests/performance/: Makefile  README.MD
(+75 files in other folders)
