[project]
name = "pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "boto3-stubs[dynamodb,s3,sqs] (>=1.38.1,<2.0.0)",
    "typer (>=0.15.2)",
    "aws-lambda-powertools (>=3.11.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pycountry (>=24.6.1)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pandas = "^2.2.2"
ftrs-python-packages = {path = "../../application/packages/python", develop = true}
freezegun = "^1.5.1"
boto3-stubs = {extras = ["dynamodb"], version = "^1.37.33"}
boto3 = "^1.37.33"
awswrangler = "^3.11.0"
pytest-asyncio = "^1.1.0"

[tool.poetry.scripts]
dos-etl = "pipeline.cli:typer_app"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB"]
ignore = [
  "TRY003", # Avoid specifying long exception names inside of exception
  "TRY300" , # Use else block after try block
  "PLR0913" # Too many arguments (6/5)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=pipeline --cov-report=term-missing --cov-fail-under=80 --cov-branch --cov-context=test"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.poetry]
packages = [
    { include = "common", from = "src" },
    { include = "seeding", from = "src" },
    { include = "dms_provisioner", from = "src" },
    { include = "record_change_trigger", from = "src" },
    { include = "reference_data_load", from = "src" },
]
