[project]
name = "dos-ingest-api"
version = "0.1.0"
description = ""
authors = [{ name = "NHS England" }]

readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["pytest-nhsd-apim (>=4.0.0,<5.0.0)", "authlib (>=1.6.5,<2.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
