[project]
name = "dos-search"
version = "0.1.0"
description = ""
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fhir-resources (>=8.0.0,<9.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastjsonschema (>=2.21.1,<3.0.0)",
    "aws-lambda-powertools (>=3.12.0,<3.13.0)",
    "aws-xray-sdk (>=2.14.0,<3.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "boto3 (>=1.37.24,<2.0.0)",
    "boto3-stubs[dynamodb] (>=1.37.24,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "functions" },
  { include = "health_check" }
]

[tool.poetry.group.shared.dependencies]
ftrs-python-packages = {path = "../../application/packages/python", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"

[tool.poetry.scripts]
dos-search-function = "functions.dos_search_ods_code_function:lambda_handler"
dos-search-health-check = "health_check.health_check_function:lambda_handler"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB", "PT"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN", "PLR2004", "PLR0913", "PLR0915", "PLR0912", "PLR0911", "C901", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = [
    "-v",
    "--cov=functions",
    "--cov=health_check",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--cov-branch",
    "--cov-context=test"
]
filterwarnings = [
    "ignore:.*model_fields.*deprecated.*:DeprecationWarning:fhir_core.*:",
]
